src/styles/studio/main.scss
#studio {
	.logo {
		height: 32px;
		width: 60px;
		border-radius: 10px;
		background: #ff0080;
	}

	.header {
		background: #fff;
		display: flex;
		align-items: center;
	}

	.content {
		position: relative;
	}

	iframe {
		width: 100%;
		height: 100%;
		background-color: #fff;
	}

	.sidebar {
		position: absolute;
		top: 20px;
		bottom: 20px;
		right: 20px;
		padding: 10px;
		border-radius: 20px;
		min-width: 300px;
		background: #fffa;
		overflow-y: scroll;

		.sidebar-inner {
			display: flex;
			align-items: center;
			flex-direction: column;
			width: 100%;
			padding: 10px;
		}

		&.stick {
			border-top: 1px solid #eee;
			top: 0;
			bottom: 0;
			right: 0;
			padding: 0;
			border-radius: 0;
			box-shadow: none;
		}
	}
}

.my-header {
	height: 65px;
	border-bottom: 1px solid #e4ce3f;
	background-color: #ffffff;
	padding: 0 20px;
}

.my-header-item {
	vertical-align: middle;
}

.menu-item-without-hover-select.ant-menu-item-active:hover {
	border-bottom: none;
	color: inherit;
}

.menu-item-without-hover-select.ant-menu-item-selected {
	border-bottom: none;
	color: inherit;
}

menu-item-without-hover-select {
	cursor: none;
}

.color-selector {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;

	.color-btn {
		border-radius: 50%;
		border-width: 0;
		width: 30px;
		height: 30px;
		margin: 2px 5px;
		box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
		display: flex;
		flex-direction: row;
		align-items: center;
		justify-content: center;
		span {
			color: #fff;
			font-size: 20px;
		}
	}

	.color-show {
		width: 100px;
		border-radius: 5px;
	}
}

.btn-save {
	display: inline-block;
    float: right;
    margin: 10px;
}

.steps-content {
	margin-top: 10px;
	border: 2px solid #e9e9e9;
	border-radius: 2px;
	background-color: #fafafa;
	min-height: 200px;
	padding: 5px;
}

.steps-action {
	display: inline-block;
}

.steps-action button {
	margin: 10px 5px 10px 0;
}

$base-color-light: #e4ce3f;
$base-color-dark: #af9b18;

.base-color {
	color: $base-color-dark;
}

.trigger-option {
	min-width: 50%;
	margin: 5px 0;
	color: $base-color-dark;
	display: block;
    text-align: right;
	vertical-align: top;
}

.trigger-btn {

}

.trigger-added {
	display: inline-block;
    margin: 0 5px;
}

.reaction-option {
	min-width: 33%;
	max-width: 33%;
	margin: 5px 0;
	color: $base-color-dark;
	display: inline-block;
    text-align: center;
	vertical-align: top;
}

.form-header {
	text-align: center;
	font-weight: bold;
	font-size: 20px
}

.form-message {
	padding: 10px;
	font-size: 16px;
	background-color: #fcfaf1;
	border-radius: 15px;
	text-align: right;
}

.my-input {
	border-color: $base-color-dark;
	border-radius: 15px;
}
.my-input-label {
	color: $base-color-dark;
	padding: 5px;
    font-size: 1em;
    display: inline-block;
	text-align: right;
}

.ant-select-selector {
	border-radius: 70px !important;
	margin-top: 0.2rem !important;
}

.goal-option {
	display: inline-block;
	border: 1px solid $base-color-light;
	border-radius: 20px;
	cursor: pointer;
	margin: 0.3em;
	padding: 0.4em;
}

.goal-option-header {
	float: right;
	margin: 0.5em;
}

.goal-option-header-img {
	display: inline-block;
	max-height: 100%;
}

.goal-option-header-icon {
	display: inline-block;
	max-height: 100%;
}

.goal-option-header-title {
	display: inline-block;
	font-size: 1.3rem;
	vertical-align: top;
	margin-right: 5px;
}

.goal-option-description {
	display: inline-block;
	text-align: right;
}

.goal-option-example-note {
	display: inline-block;
	text-align: right;
	float: right;
}

.goal-modal-content {
	display: inline-block;
}

.icon-btn:hover {
	color: $base-color-dark;
}

.iframe-desktop-mode {
	width: calc(100vw - 340px) !important;
}

.iframe-mobile-mode {
	border-radius: 20px;
}

#my-sidebar {
	overflow: hidden !important;
	width: 340px !important;
	border-left: 1px solid $base-color-dark;
	border-radius: 10px !important;
}

.iframe-back-desktop-mode {
	height: 100% !important;
}

.iframe-back-mobile-mode {
	height: 98% !important;
    width: 360px !important;
    margin-left: calc(100vw/2 - 350px) !important;
    background: #e3dfc3;
    padding: 15px 5px;
    scroll-behavior: auto;
    border-radius: 20px;
    margin-top: 5px;
	min-width: 380px;
}

.my-btn:hover {
	color: $base-color-dark;
}

@media screen and (max-width: 650px) {
  .my-header-item-title {
		//visibility: hidden;
		//clear: both;
		//float: left;
		//margin: 10px auto 5px 20px;
		//width: 28%;
		display: none !important;
  }
}

.my-header-item-title:hover {
	color: $base-color-dark;
}

